--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </div>
         </div>
         <h1>Barcode Card Generator</h1>
-        <p>"A Tech company That Bakes"</p>
+        <p>"The Tech company That Bakes"</p>
       </div>
 
       <!-- Main Content -->
@@ -110,4 +110,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
