--- a/index.html
+++ b/index.html
@@ -37,7 +37,15 @@
 
           <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" id="password" placeholder="Enter password" />
+            <div class="password-input-wrapper">
+              <input type="password" id="password" placeholder="Enter password" />
+              <button type="button" class="toggle-password" onclick="togglePasswordVisibility()">
+                <svg id="eye-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                  <circle cx="12" cy="12" r="3"></circle>
+                </svg>
+              </button>
+            </div>
           </div>
 
           <div class="button-group">
@@ -109,6 +117,4 @@
 
     <script src="script.js"></script>
   </body>
-</html>
-
-
+</html>   
